nodemon installed and server created

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fitness training app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/emrecolak-23/misFit#readme",
   "dependencies": {
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
