--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
