--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
