--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
